--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h1>My StoryMap</h1>
+    <h1>Rutas artisticas</h1>
     <!-- Embed StoryMapJS with an iframe -->
     <iframe src="https://uploads.knightlab.com/storymapjs/091fc2c906e53054c424e4e3a2dafd50/prueba-mapa-performance/index.html" allowfullscreen></iframe>
 </body>
